--- a/UneContChallenge/Views/Shared/_Layout.cshtml
+++ b/UneContChallenge/Views/Shared/_Layout.cshtml
@@ -235,11 +235,11 @@
                                             <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                         </a>
                                         <div role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
-                                            <a onclick="loading()" href="#" tabindex="0" class="dropdown-item"><i class="fa fa-user"></i>&nbsp;Minha Conta</a>
-                                            <a onclick="loading()" href="#" tabindex="0" class="dropdown-item"><i class="fa fa-image"></i>&nbsp;Alterar Foto</a>
-                                            <a onclick="loading()" href="#" tabindex="0" class="dropdown-item"><i class="fa fa-key"></i>&nbsp;Alterar Senha</a>
+                                            <a  href="#" tabindex="0" class="dropdown-item"><i class="fa fa-user"></i>&nbsp;Minha Conta</a>
+                                            <a  href="#" tabindex="0" class="dropdown-item"><i class="fa fa-image"></i>&nbsp;Alterar Foto</a>
+                                            <a  href="#" tabindex="0" class="dropdown-item"><i class="fa fa-key"></i>&nbsp;Alterar Senha</a>
                                             <div class="dropdown-divider"></div>
-                                            <a href="#" onclick="loading()" tabindex="0" class="dropdown-item"><i class="fa fa-sign-out-alt"></i>&nbsp;Sair do Sistema</a>
+                                            <a href="#" tabindex="0" class="dropdown-item"><i class="fa fa-sign-out-alt"></i>&nbsp;Sair do Sistema</a>
                                         </div>
                                     </div>
                                 </div>
